log/error.log-2016-02-20-231829
  File "magnet_crawler.py", line 110
    with open('magnet_output', w+) as output_file:
                                 ^
SyntaxError: invalid syntax
